[gd_scene load_steps=21 format=1]

[ext_resource path="res://water.png" type="Texture" id=1]
[ext_resource path="res://wavegenerator.gd" type="Script" id=2]
[ext_resource path="res://background.png" type="Texture" id=3]
[ext_resource path="res://Schiff2.png" type="Texture" id=4]
[ext_resource path="res://canon.png" type="Texture" id=5]
[ext_resource path="res://Schiffh√ºlle.png" type="Texture" id=6]
[ext_resource path="res://Schiff.png" type="Texture" id=7]
[ext_resource path="res://canonball.png" type="Texture" id=8]
[ext_resource path="res://canon-loader.png" type="Texture" id=9]
[ext_resource path="res://canon-filler.png" type="Texture" id=10]
[ext_resource path="res://canonball2.png" type="Texture" id=11]
[ext_resource path="res://coin.png" type="Texture" id=12]
[ext_resource path="res://text_small.fnt" type="BitmapFont" id=13]
[ext_resource path="res://oceanfloor.png" type="Texture" id=14]
[ext_resource path="res://backgroundmusic.ogg" type="AudioStream" id=15]
[ext_resource path="res://pirate-fire1.ogg" type="AudioStream" id=16]
[ext_resource path="res://enemy-fire1.ogg" type="AudioStream" id=17]

[sub_resource type="CanvasItemMaterial" id=1]

shader/shading_mode = 0

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.933594, 0.142227, 0.142227, 1 )
light_color = Color( 0.769531, 0.0811615, 0.0811615, 1 )
dark_color = Color( 0.261719, 0.0357819, 0.0357819, 1 )
border_size = 8
border_blend = true
draw_bg = true

[sub_resource type="GDScript" id=3]

script/source = "extends PopupDialog\n\n# class member variables go here, for example:\n# var a = 2\n# var b = \"textvar\"\n\nfunc _ready():\n\t# Called every time the node is added to the scene.\n\t# Initialization here\n\tpass\n\n\nfunc _on_Button_toggled( pressed ):\n\t_restart()\n\tpass # replace with function body\n\n\nfunc _on_Button_pressed():\n\t_restart()\n\tpass # replace with function body\n\nfunc _restart():\n\tfor i in range (241):\n\t\tget_parent().get_node(\"Water\").water[i+2]=(Vector2((i-120)*8,0))\n\tget_parent().get_node(\"Water\").enemyhealth=20\n\tget_parent().get_node(\"Enemy\").set_offset(Vector2(0,-40))\n\tget_parent().get_node(\"Enemy/ProgressBar\").set_value(100)\n\tself.hide()"

[node name="World" type="Node2D"]

[node name="Water" type="Polygon2D" parent="."]

transform/pos = Vector2( 960, 540 )
z/z = -3
polygon = Vector2Array( -960, 0, 960, 0, 960, 540, -960, 540 )
uv = Vector2Array( 0, 0, 1920, 0, 1920, 540, 0, 540 )
color = Color( 1, 1, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = ExtResource( 1 )
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
script/script = ExtResource( 2 )

[node name="Waterforeground" type="Polygon2D" parent="."]

transform/pos = Vector2( 960, 540 )
transform/scale = Vector2( 1.02, 1.02 )
z/z = 1
polygon = Vector2Array( -960, 0, 960, 0, 960, 540, -960, 540 )
uv = Vector2Array( 0, 0, 1920, -1.52588e-05, 1920, 540, 1.52588e-05, 540 )
color = Color( 1, 1, 1, 0.45902 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = ExtResource( 1 )
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 960, 540 )
z/z = -5
texture = ExtResource( 3 )

[node name="Enemy" type="Sprite" parent="."]

transform/pos = Vector2( 1770, 540 )
texture = ExtResource( 4 )
offset = Vector2( 0, -40 )

[node name="ProgressBar" type="ProgressBar" parent="Enemy"]

material/material = SubResource( 1 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -45.0
margin/top = -136.0
margin/right = 48.0
margin/bottom = -120.0
custom_styles/fg = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="Node2D1" type="Sprite" parent="Enemy"]

transform/pos = Vector2( 0, -30 )
transform/rot = 70.0
z/z = -1
texture = ExtResource( 5 )
offset = Vector2( 0, -25 )

[node name="Shield" type="Sprite" parent="Enemy"]

visibility/visible = false
transform/pos = Vector2( 0, -30 )
z/z = 1
texture = ExtResource( 6 )
offset = Vector2( 0, -10 )

[node name="Character" type="Sprite" parent="."]

transform/pos = Vector2( 150, 529.862 )
z/z = -1
texture = ExtResource( 7 )
offset = Vector2( 0, -40 )

[node name="Node2D" type="Sprite" parent="Character"]

transform/pos = Vector2( 0, -30 )
transform/rot = -70.0
z/z = -1
texture = ExtResource( 5 )
offset = Vector2( 0, -25 )

[node name="ProgressBar1" type="ProgressBar" parent="Character"]

material/material = SubResource( 1 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -46.0
margin/top = -137.0
margin/right = 47.0
margin/bottom = -121.0
custom_styles/fg = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="Shield" type="Sprite" parent="Character"]

visibility/visible = false
transform/pos = Vector2( 0, -30 )
z/z = 1
texture = ExtResource( 6 )
offset = Vector2( 0, -10 )

[node name="Canonball" type="Sprite" parent="."]

visibility/visible = false
z/z = -2
texture = ExtResource( 8 )

[node name="splash" type="Particles2D" parent="."]

transform/pos = Vector2( 1644.75, 516.379 )
transform/scale = Vector2( 4, 4 )
z/z = -4
config/amount = 1000
config/lifetime = 15.0
config/time_scale = 4.0
config/preprocess = 20.0
config/emit_timeout = 0.5
config/emitting = false
params/direction = 160.0
params/spread = 10.0
params/linear_velocity = 30.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 10.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 2.0
params/final_size = 1.0
params/hue_variation = 0.2
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 0.628204, 0.898438, 0.632427, 1 )

[node name="PopupDialog" type="PopupDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 826.0
margin/top = 327.0
margin/right = 1089.0
margin/bottom = 409.0
popup/exclusive = false
script/script = SubResource( 3 )

[node name="Label" type="Label" parent="PopupDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 18.0
margin/right = 227.0
margin/bottom = 32.0
text = "Round won, Points earned: 100"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="PopupDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 70.0
margin/top = 46.0
margin/right = 193.0
margin/bottom = 66.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "next Round"
flat = false

[node name="PopupDialog1" type="PopupDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 826.0
margin/top = 327.0
margin/right = 1089.0
margin/bottom = 409.0
popup/exclusive = false
script/script = SubResource( 3 )

[node name="Label" type="Label" parent="PopupDialog1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 18.0
margin/right = 227.0
margin/bottom = 32.0
text = "Game Over"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="PopupDialog1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 70.0
margin/top = 46.0
margin/right = 193.0
margin/bottom = 66.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "next Round"
flat = false

[node name="Loadcanon" type="Sprite" parent="."]

transform/pos = Vector2( 213.474, 945.822 )
z/z = 2
texture = ExtResource( 9 )

[node name="fillament" type="Sprite" parent="Loadcanon"]

transform/pos = Vector2( -47.0192, 14.8298 )
transform/rot = -72.8
z/z = -1
texture = ExtResource( 10 )

[node name="Canonball" type="Sprite" parent="Loadcanon"]

transform/pos = Vector2( 77.1847, -25.7283 )
texture = ExtResource( 11 )

[node name="Interface" type="Node2D" parent="."]

transform/pos = Vector2( 1690, 60 )

[node name="Sprite" type="Sprite" parent="Interface"]

texture = ExtResource( 12 )

[node name="Label" type="Label" parent="Interface"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = -10.0
margin/right = 170.0
margin/bottom = 15.0
custom_fonts/font = ExtResource( 13 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="Interface"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -40.0
margin/top = -41.0
margin/right = 36.0
margin/bottom = -20.0
custom_fonts/font = ExtResource( 13 )
text = "Score: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite 2" type="Sprite" parent="."]

transform/pos = Vector2( 960, 810 )
texture = ExtResource( 14 )

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 15 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="StreamPlayer1" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 16 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="StreamPlayer2" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 17 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="PopupDialog/Button" to="PopupDialog" method="_on_Button_pressed"]

[connection signal="toggled" from="PopupDialog/Button" to="PopupDialog" method="_on_Button_toggled"]


